util: avoid considering dpkg temporary files relevant for anything

https://bugs.freedesktop.org/show_bug.cgi?id=82453